Bug 12798 - No wake up after suspend. - Toshiba L300
Summary: No wake up after suspend. - Toshiba L300
Status: CLOSED PATCH_ALREADY_AVAILABLE
Alias: None
Product: ACPI
Classification: Unclassified
Component: Power-Sleep-Wake (show other bugs)
Hardware: All Linux
: P1 normal
Assignee: Zhang Rui
URL:
Keywords:
Depends on:
Blocks: 7216 11808
  Show dependency tree
 
Reported: 2009-03-01 15:30 UTC by Sebastian Zazula
Modified: 2009-03-17 09:59 UTC (History)
2 users (show)

See Also:
Kernel Version: 2.6.27.4
Subsystem:
Regression: Yes
Bisected commit-id:


Attachments
dmidecode (9.02 KB, application/octet-stream)
2009-03-01 22:47 UTC, Sebastian Zazula
Details
patch: blacklist toshiba l300 that require to set SCI_EN directly on resume (1022 bytes, patch)
2009-03-01 23:11 UTC, Zhang Rui
Details | Diff

Description Sebastian Zazula 2009-03-01 15:30:32 UTC
Latest working kernel version:2.6.27.3
Earliest failing kernel version:2.6.27.4
Distribution:Arch Linux
Hardware Environment:Toshiba L300
Software Environment:
Problem Description: Machine will not resume after suspending to ram. It wakes up but screen is blank and it halts (even capslock doesn't work). It depends on changes made from 2.6.27.3 to 2.6.27.4 in /drivers/acpi/sleep/main.c procedure:
+       /* If ACPI is not enabled by the BIOS, we need to enable it here. */
+       acpi_enable();
Steps to reproduce: Sleep and wake up.
Comment 1 Zhang Rui 2009-03-01 19:24:04 UTC
it seems that we need to blacklist this Toshiba machine as well.
Comment 2 Zhang Rui 2009-03-01 19:27:33 UTC
please attach the dmidecode output.

Rafael,
do you think this is a duplicate of bug #12038?
Comment 3 Sebastian Zazula 2009-03-01 22:47:00 UTC
Created attachment 20401 [details]
dmidecode
Comment 4 Zhang Rui 2009-03-01 23:11:41 UTC
Created attachment 20402 [details]
patch: blacklist toshiba l300 that require to set SCI_EN directly on resume

please get the latest kernel source code, and build a new kernel with this patch.
Comment 5 Sebastian Zazula 2009-03-02 03:54:16 UTC
thresume on patched kernel now works properly. thx.
Comment 6 Sebastian Zazula 2009-03-02 03:54:57 UTC
resume on patched kernel now works properly. thx.
Comment 7 Rafael J. Wysocki 2009-03-02 05:48:47 UTC
(In reply to comment #2)
> please attach the dmidecode output.
> 
> Rafael,
> do you think this is a duplicate of bug #12038?

It is, ie. the problem is the same.
Comment 8 Rafael J. Wysocki 2009-03-02 14:39:17 UTC
Handled-By : Zhang Rui <rui.zhang@intel.com>
Patch : http://bugzilla.kernel.org/attachment.cgi?id=20402&action=view
Comment 9 Len Brown 2009-03-15 19:14:09 UTC
patch in comment #4 applied to acpi tree
Comment 10 Len Brown 2009-03-17 09:59:20 UTC
shipped upstream on top of 2.6.29-rc8-git2
closed

Note You need to log in before you can comment on or make changes to this bug.