ACPI suspend: Blacklist Toshiba Satellite L300 that requires to set SCI_EN directly on resume

This is a supplement of commit 65df78473ffbf3bff5e2034df1638acc4f3ddd50.
http://bugzilla.kernel.org/show_bug.cgi?id=12798

Signed-off-by: Zhang Rui <rui.zhang@intel.com>
Signed-off-by: Len Brown <len.brown@intel.com>